--- a/project-nelin-ds/angular.json
+++ b/project-nelin-ds/angular.json
@@ -3,9 +3,13 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "project-nelin": {
+    "project-nelin-ds": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "sass"
+        }
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -13,20 +17,20 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/project-nelin",
+            "outputPath": "dist/project-nelin-ds",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
               "zone.js"
             ],
             "tsConfig": "tsconfig.app.json",
+            "inlineStyleLanguage": "sass",
             "assets": [
               "src/favicon.ico",
               "src/assets"
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/purple-green.css",
-              "src/styles.css"
+              "src/styles.sass"
             ],
             "scripts": []
           },
@@ -61,10 +65,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "project-nelin:build:production"
+              "browserTarget": "project-nelin-ds:build:production"
             },
             "development": {
-              "browserTarget": "project-nelin:build:development"
+              "browserTarget": "project-nelin-ds:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -72,7 +76,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "project-nelin:build"
+            "browserTarget": "project-nelin-ds:build"
           }
         },
         "test": {
@@ -83,31 +87,21 @@
               "zone.js/testing"
             ],
             "tsConfig": "tsconfig.spec.json",
+            "inlineStyleLanguage": "sass",
             "assets": [
               "src/favicon.ico",
               "src/assets"
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/purple-green.css",
-              "src/styles.css"
+              "src/styles.sass"
             ],
             "scripts": []
-          }
-        },
-        "deploy": {
-          "builder": "@angular/fire:deploy",
-          "options": {
-            "prerender": false,
-            "ssr": false,
-            "browserTarget": "project-nelin:build:production",
-            "firebaseProject": "project-nelin",
-            "firebaseHostingSite": "project-nelin"
           }
         }
       }
     }
   },
   "cli": {
-    "analytics": "81c09f24-be6c-4342-acec-f1f6757529de"
+    "analytics": "6fcac860-1c75-4057-87d4-bfd455e37992"
   }
 }
